--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "currency-api",
   "version": "1.0.0",
   "scripts": {
-    "start": "node server.js"  // Asegúrate de que el backend se inicie con este comando
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.7.5",
